# cwatch

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  REFACTORING_DESIGN.md  RELEASING.md  example-config.toml  pyproject.toml  pytest.ini
.github/workflows/: linter.yml  manual-release.yml  release-please.yml  release.yml  tests.yml
src/cwatch/: __init__.py  collector.py  cw.py  cwatch.py  data_structures.py  email_sender.py  reporters.py
tests/: conftest.py  test_api.py  test_comparison.py  test_config.py  test_database.py  test_filtering.py  test_integration.py  test_reporters.py  test_targets.py
