[project]
name = "cwatch"
version = "0.0.4"
authors = [
  { name="Peter Reuterås", email="peter@reuteras.net" },
]
description = "Monitors and generates a report for changes in reports from Cyberbro"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.1",
    "jsondiff>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cwatch= "cwatch:main"

[project.urls]
Homepage = "https://github.com/reuteras/cwatch"
Issues = "https://github.com/reuteras/cwatch/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pylint>=3.3.3",
    "ruff>=0.9.2",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true

[tool.ruff.lint.pydocstyle]
convention="google"
